--- a/style.css
+++ b/style.css
@@ -1,15 +1,15 @@
 body {
-    color: lightgreen;
-    background-color: orangered; /* Cor de fundo suave */
-    font-family: 'Times New Roman', Times, serif;
+    color: black;
+    background-color: lightsalmon; /* Cor de fundo suave */
+    font-family: Arial, Helvetica, sans-serif;
     text-align: center;
 }
 
 /* Estiliza a foto para ficar redonda */
 img {
-    width: 150px;
-    height: 150px;
-    border-radius: 50px 70px 70px 50px; /* Deixa a imagem redonda */
+    width: 200px;
+    height: 200px;
+    border-radius: 30px 70px 70px 30px; /* Deixa a imagem redonda */
     object-fit: cover; /* Ajusta o enquadramento */
     border: 3px solid whitesmoke; /* Adiciona uma borda sutil */
     margin-top: 20px;
